# egg_rpg

./: Cargo.toml
assets/: egg_stomp.aseprite  egg_stomp_forward.aseprite  egg_vilager.aseprite  gameboy_tileset.aseprite  gameboy_tileset_inside.aseprite  mockup.aseprite  palette.aseprite  world.ldtk
assets/music/: creepy.mp3.asd  town.mp3.asd
assets/shaders/: palette_swap.wgsl
music_projects/5_4 Project/: 5_4.als
music_projects/5_4 Project/Ableton Project Info/: Project8_1.cfg
music_projects/5_4 Project/Backup/: 5_4 [2024-11-19 143459].als  5_4 [2024-11-19 150315].als  5_4 [2024-11-19 154320].als  5_4 [2024-11-19 154415].als  5_4 [2024-11-20 091914].als  5_4 [2024-11-20 092642].als
music_projects/another_not_sure Project/: another_not_sure.als
music_projects/another_not_sure Project/Ableton Project Info/: Project8_1.cfg
music_projects/another_not_sure Project/Backup/: another_not_sure [2024-11-12 151104].als  another_not_sure [2024-11-13 104528].als
music_projects/creepy Project/: creepy.als
music_projects/creepy Project/Ableton Project Info/: Project8_1.cfg
music_projects/creepy Project/Backup/: creepy [2024-11-14 154542].als  creepy [2024-11-15 102231].als  creepy [2024-11-15 104202].als  creepy [2024-11-15 105559].als  creepy [2024-11-15 105749].als  creepy [2024-11-15 112457].als  (+4 more)
music_projects/not_sure Project/: not_sure.als
music_projects/town Project/: town.als
music_projects/town_1 Project/: town_1.als
src/: audio.rs  camera.rs  character.rs  collision.rs  level_loading.rs  main.rs  palette.rs  post_process.rs  util.rs  warp.rs
(+33 files in other folders)
