[package]
name = "bevy_plat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.2"
bevy_ecs_tilemap = "0.14"
bevy_ecs_ldtk = "0.10"
bevy-inspector-egui = "0.26.0"
serde_json = "1.0.132"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
